# File_Manipulation

./: README.md  exampleDirectory.py  exampleFileHandling_txt.py  exempleDataFrame.py  exempleFileHandling_txt.py  pyproject.toml  replit.nix
